--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -31,27 +31,12 @@
         app:layout_constraintStart_toEndOf="@+id/civ_userPhoto"
         app:layout_constraintTop_toTopOf="@+id/civ_userPhoto" />
 
-    <TextView
-        android:id="@+id/tv_email"
-        style="@style/body_large"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:ellipsize="end"
-        android:fontFamily="@font/popings_medium_500"
-        android:maxLines="1"
-        android:text="RodriguezHerreroMiguel@gmail.com"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/civ_userPhoto"
-        app:layout_constraintTop_toBottomOf="@+id/civ_userPhoto" />
-
     <com.google.android.material.divider.MaterialDivider
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="1.5dp"
+        android:layout_marginTop="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_email" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
