--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -122,7 +122,10 @@
             android:layout_width="250dp"
             android:layout_height="250dp"
             android:layout_margin="20dp"
+            app:fab_labelsPosition="left"
+            app:fab_expandDirection="up"
             app:fab_addButtonColorNormal="@color/primaryColor"
+            app:fab_addButtonColorPressed="@color/blue_ribbon_500"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
@@ -133,7 +136,8 @@
             app:fab_colorNormal="@color/blue_primary_light_200"
             app:fab_icon="@drawable/ic_calendar_today_24"
             app:fab_size="mini"
-            app:fab_title="@string/event" />
+            app:fab_title="@string/event"
+            />
 
         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_addReminder"
