--- a/app/src/main/res/layout/fragment_all_movements.xml
+++ b/app/src/main/res/layout/fragment_all_movements.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -43,34 +44,5 @@
         tools:itemCount="5"
         tools:listitem="@layout/cell_day_all_movements" />
 
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/famb_addMenu"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        android:layout_margin="20dp"
-        app:fab_addButtonColorPressed="@color/blue_ribbon_500"
 
-        app:fab_addButtonColorNormal="@color/primaryColor"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-    <com.getbase.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_addIncome"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:fab_colorNormal="@color/blue_primary_light_200"
-        app:fab_icon="@drawable/ic_money_24"
-        app:fab_size="mini"
-        app:fab_title="@string/income" />
-
-    <com.getbase.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_addExpense"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:fab_colorNormal="@color/blue_primary_light_200"
-        app:fab_icon="@drawable/ic_shopping_cart_24"
-        app:fab_size="mini"
-        app:fab_title="@string/expense" />
-
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
 </androidx.constraintlayout.widget.ConstraintLayout>
