--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primaryColor">#4a75e6</color>
+    <color name="primaryColorDark">#3E60BA</color>
     <color name="blue_fog_100">#dfe0ff</color>
     <color name="blue_light_200">#b2b8fb</color>
     <color name="blue_primary_light_200">#9CB1E8</color>
@@ -22,6 +23,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="white_magnolia">#DBDBDB</color>
     <color name="black">#FF000000</color>
+    <color name="black_translucent">#74000000</color>
+    <color name="transparent">#00000000</color>
 
 
 </resources>
