--- a/app/src/main/res/layout/cell_calendar_events.xml
+++ b/app/src/main/res/layout/cell_calendar_events.xml
@@ -1,49 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cl_eventArea"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="3dp"
     android:background="@android:color/transparent"
-    android:orientation="horizontal"
-    android:id="@+id/cl_eventArea"
-    android:layout_marginTop="3dp">
+    android:orientation="horizontal">
 
-    <View
-        android:id="@+id/view"
-        android:layout_width="2dp"
-        android:layout_height="50dp"
-        android:background="@color/gray_dove_500"
-        app:layout_constraintEnd_toEndOf="@+id/civ_colorTag"
-        app:layout_constraintStart_toStartOf="@+id/civ_colorTag" />
-
-    <de.hdodenhof.circleimageview.CircleImageView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/civ_colorTag"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="15dp"
+        android:layout_height="0dp"
         android:elevation="1dp"
-        android:src="@color/orange"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:cardCornerRadius="40dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_eventTitle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/tv_eventType" />
 
     <TextView
         android:id="@+id/tv_eventType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:fontFamily="@font/popings_regular_400"
         android:text="Type"
         android:textSize="12sp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_eventTitle"
-        app:layout_constraintStart_toStartOf="@+id/tv_eventTitle" />
+        app:layout_constraintStart_toEndOf="@+id/civ_colorTag"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/tv_eventTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:fontFamily="@font/popings_medium_500"
         android:text="Title child"
         android:textSize="15sp"
-        android:layout_marginStart="10dp"
         app:layout_constraintStart_toEndOf="@+id/civ_colorTag"
-        app:layout_constraintTop_toTopOf="@+id/civ_colorTag" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_eventType" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
