--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -42,11 +42,8 @@
                     android:text="@string/mind_master_logo"
                     android:textColor="@color/gray_scorpion_200"
                     android:textSize="20sp" />
-
             </LinearLayout>
-
         </LinearLayout>
-
 
         <TextView
             android:id="@+id/tv_signUp_title"
@@ -68,9 +65,11 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_name"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                app:boxStrokeErrorColor="@color/red_error_500"
                 app:startIconDrawable="@drawable/ic_person_24"
                 app:startIconTint="@color/gray_dove_500">
 
@@ -83,14 +82,15 @@
                     android:maxEms="25"
                     android:singleLine="true"
                     android:textSize="18sp" />
-
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_surname"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
+                app:boxStrokeErrorColor="@color/red_error_500"
                 app:startIconDrawable="@drawable/ic_person_24"
                 app:startIconTint="@color/gray_dove_500">
 
@@ -103,11 +103,11 @@
                     android:maxEms="25"
                     android:singleLine="true"
                     android:textSize="18sp" />
-
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_email"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -115,6 +115,7 @@
                 app:boxCornerRadiusBottomStart="5dp"
                 app:boxCornerRadiusTopEnd="5dp"
                 app:boxCornerRadiusTopStart="5dp"
+                app:boxStrokeErrorColor="@color/red_error_500"
                 app:startIconDrawable="@drawable/ic_email_24"
                 app:startIconTint="@color/gray_dove_500">
 
@@ -126,16 +127,17 @@
                     android:inputType="textEmailAddress"
                     android:maxEms="250"
                     android:singleLine="true" />
-
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_DateBirthdate"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:clickable="false"
                 android:focusable="false"
+                app:boxStrokeErrorColor="@color/red_error_500"
                 app:startIconDrawable="@drawable/ic_calendar_month_24"
                 app:startIconTint="@color/gray_dove_500">
 
@@ -154,6 +156,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_password"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -161,6 +164,7 @@
                 app:boxCornerRadiusBottomStart="5dp"
                 app:boxCornerRadiusTopEnd="5dp"
                 app:boxCornerRadiusTopStart="5dp"
+                app:boxStrokeErrorColor="@color/red_error_500"
                 app:endIconMode="password_toggle"
                 app:startIconDrawable="@drawable/ic_lock_24"
                 app:startIconTint="@color/gray_dove_500">
@@ -178,6 +182,7 @@
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/til_repeat_password"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
@@ -185,6 +190,7 @@
                 app:boxCornerRadiusBottomStart="5dp"
                 app:boxCornerRadiusTopEnd="5dp"
                 app:boxCornerRadiusTopStart="5dp"
+                app:boxStrokeErrorColor="@color/red_error_500"
                 app:endIconMode="password_toggle"
                 app:startIconDrawable="@drawable/ic_lock_24"
                 app:startIconTint="@color/gray_dove_500">
@@ -200,13 +206,15 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <CheckBox
+            <com.google.android.material.checkbox.MaterialCheckBox
                 android:id="@+id/checkbox"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginBottom="10dp"
                 android:checked="false"
                 android:text="@string/check_terms_and_conditions"
-                android:textColor="@color/gray_dark_700" />
+                android:textColor="@color/gray_dark_700"
+                app:errorShown="false" />
 
             <TextView
                 android:id="@+id/tv_error"
@@ -229,48 +237,6 @@
                 android:textColor="@color/white"
                 android:textSize="17sp"
                 app:iconTint="@color/white" />
-
-            <TextView
-                style="@style/secondary_titles"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/or"
-                android:textColor="@color/gray_dark_700" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:orientation="horizontal"
-                android:paddingTop="8dp"
-                android:paddingBottom="8dp">
-
-                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                    android:id="@+id/efab_google"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="5dp"
-                    android:layout_weight="1"
-                    android:backgroundTint="#d1432c"
-                    android:text="@string/google"
-                    android:textColor="@color/white"
-                    android:textSize="15sp"
-                    app:icon="@drawable/google_logo"
-                    app:iconTint="@color/white" />
-
-                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
-                    android:id="@+id/efab_facebook"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:backgroundTint="#315f93"
-                    android:text="@string/facebook"
-                    android:textColor="@color/white"
-                    android:textSize="15sp"
-                    app:icon="@drawable/facebook_logo"
-                    app:iconTint="@color/white" />
-
-            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
